[project]
name = "zerovram-airllm-engine"
version = "0.1.0"
description = "Zero-VRAM LLM inference via AirLLM layer-paged mmap loading (EX05)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "airllm>=2.11.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
